[package]
name = "notion-bot"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "6.0.0"
eyre = "0.6.11"
inquire = { version = "0.9.4", features = ["chrono", "date"] }
notion = "0.6.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.29"
tokio = { version = "1.34.0", features = ["full"] }
